--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "classnames": "^2.3.1",
+    "firebase": "^9.8.4",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
