--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "firebase": "^9.8.4",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-firebase-hooks": "^5.0.3"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.1.6",
