--- a/package.json
+++ b/package.json
@@ -10,38 +10,41 @@
     "test:unit": "jest --watch"
   },
   "dependencies": {
-    "@heroicons/react": "^1.0.6",
-    "@tiptap/react": "^2.0.0-beta.113",
-    "@tiptap/starter-kit": "^2.0.0-beta.189",
-    "classnames": "^2.3.1",
-    "firebase": "^9.8.4",
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-firebase-hooks": "^5.0.3"
+    "@heroicons/react": "^2.2.0",
+    "@tiptap/react": "^3.3.0",
+    "@tiptap/starter-kit": "^3.3.0",
+    "classnames": "^2.5.1",
+    "firebase": "^12.2.1",
+    "next": "^15.5.2",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^12.1.6",
-    "@testing-library/dom": "^8.16.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.3.0",
-    "@types/jest": "^28.1.6",
-    "@types/node": "17.0.34",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.25.0",
-    "@typescript-eslint/parser": "^5.25.0",
-    "autoprefixer": "^10.4.7",
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6",
-    "eslint-config-prettier": "^8.5.0",
-    "jest": "^28.1.3",
-    "jest-environment-jsdom": "^28.1.3",
-    "postcss": "^8.4.13",
-    "prettier": "^2.6.2",
-    "prettier-plugin-tailwindcss": "^0.1.11",
-    "tailwindcss": "^3.0.24",
-    "typescript": "4.6.4"
-  }
+    "@next/eslint-plugin-next": "^15.5.2",
+    "@tailwindcss/postcss": "^4.1.12",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.3.0",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.34.0",
+    "eslint-config-next": "^15.5.2",
+    "eslint-config-prettier": "^10.1.8",
+    "jest": "^30.1.1",
+    "jest-environment-jsdom": "^30.1.1",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^4.1.12",
+    "ts-jest": "^29.4.1",
+    "typescript": "^5.9.2"
+  },
+  "packageManager": "yarn@3.6.4"
 }
